syntax = "proto3";

package com.grpc;

option java_multiple_files = true;
option java_package = "com.grpc";
option java_outer_classname = "ApiServiceGrpc";
option java_generic_services = true;

message ApiRequest {
  string url = 1;
  string request_body = 2;
  string api_key = 3;
}

message ApiResponse {
  bytes data = 1;
  map<string, string> response_headers = 2;
}

service ApiService {
  rpc SendRequest(ApiRequest) returns (ApiResponse) {}
}
